build/dev/api2/api2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api2
  name: api2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api2
  template:
    metadata:
      labels:
        app: api2
    spec:
      containers:
      - name: api2
        image: k3d-rtk-dev-registry:5050/api2:latest
        ports:
        - containerPort: 8080
