build/dev/api2/api2-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api2
  name: api2
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: api2
